syntax = "proto3";

package pb;
option go_package = "./pb";

// For generate proto:
// $ protoc -I proto --go_out=plugins=grpc:. proto/request.proto

message TransportData {
  string remotePath = 1;
  string linkPath   = 2;

  string fileName   = 4;
  string extension  = 5;

  string mode  = 6;
  int64  size  = 7;

  bytes  chunk = 8;
}